# graphviz

./: .gitignore  .gitlab-ci.yml  .pylintrc  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DEVELOPERS.md  Doxyfile.in  Makefile.am  README.md  config-cmake.h.in  configure.ac  distro_notes.txt  gen_version.py  graphviz.sln  graphviz.spec  requirements.txt
cmd/: CMakeLists.txt
cmd/dot/: CMakeLists.txt  Makefile.am  all_builtins.cpp  dot.1  dot.c  dot.vcxproj  dot_builtins.c  dot_builtins.cpp  no_builtins.c
cmd/edgepaint/: CMakeLists.txt  Makefile.am  edgepaint.vcxproj  edgepaintmain.c
cmd/gvedit/: CMakeLists.txt  Makefile.am  csettings.cpp  csettings.h  gvedit.pro.in  gvedit.vcxproj  gvedit.vcxproj.filters  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h
cmd/gvmap/: CMakeLists.txt  Makefile.am  cluster.c  country_graph_coloring.c  country_graph_coloring.h  gvmap.c  gvmap.vcxproj  make_map.c  make_map.h  power.c  power.h
cmd/gvpr/: CMakeLists.txt  Makefile.am  gvpr.1  gvpr.vcxproj  gvprmain.c
cmd/lefty/: gfxview.c
cmd/mingle/: CMakeLists.txt  Makefile.am  mingle.vcxproj  minglemain.cpp
cmd/smyrna/: CMakeLists.txt  Makefile.am  arcball.c  arcball.h  btree.c  draw.c  draw.h  glexpose.c  glexpose.h  glmotion.c  glmotion.h  gltemplate.c  gltemplate.h  glutrender.c  gvprpipe.c  gvprpipe.h  hier.c  hier.h  hotkeymap.c  hotkeymap.h  main.c  polytess.c  polytess.h  punchlist.txt  selectionfuncs.c  selectionfuncs.h  smyrna.vcxproj  smyrna_utils.c  smyrna_utils.h  smyrnadefs.h  topfisheyeview.c  topfisheyeview.h  topviewfuncs.c  topviewfuncs.h  tvnodes.c  tvnodes.h  viewport.c  viewport.h  viewportcamera.c  viewportcamera.h
cmd/tools/: CMakeLists.txt  Makefile.am  acyclic.c  acyclic.vcxproj  bcomps.c  bcomps.vcxproj  ccomps.c  ccomps.vcxproj  colortbl.h  colxlate.c  convert.h  cvtgxl.c  dijkstra.c  dijkstra.vcxproj  gc.c  gc.vcxproj  gml2gv.c  gml2gv.vcxproj  gmlparse.y  gmlscan.l  graph_generator.c  graph_generator.h  graphml2gv.c  graphml2gv.vcxproj  gv2gml.c  gv2gml.vcxproj  gv2gxl.c  gvcolor.c  gvcolor.vcxproj  gvgen.c  gvgen.vcxproj  gvpack.c  gvpack.cpp  gvpack.vcxproj  gvpack_builtins.c  gxl2gv.c  gxl2gv.vcxproj  iscluster.h  matrix_market.c  matrix_market.h  (+14 more)
lib/ast/: CMakeLists.txt  Makefile.am  ast.h  ast.vcxproj  ast.vcxproj.filters  chresc.c  chrtoi.c  error.c  error.h  fmtbuf.c  fmtesc.c  pathaccess.c  pathcat.c  pathfind.c  pathpath.c  sfstr.h  stresc.c  strmatch.c
lib/edgepaint/: Makefile.am  edge_distinct_coloring.c  edge_distinct_coloring.h  edgepaintlib.vcxproj  edgepaintlib.vcxproj.filters  furtherest_point.c  furtherest_point.h  intersection.c  intersection.h  lab.c  lab.h  lab_gamut.c  lab_gamut.h  lab_gamut.vcxproj  node_distinct_coloring.c  node_distinct_coloring.h
lib/pathplan/: CMakeLists.txt  Makefile.am  Pathplan.vcxproj  cvt.c  inpoly.c  libpathplan.pc.in  pathgeom.h  pathplan.h  pathutil.h  route.c  shortest.c  shortestpth.c  solvers.c  solvers.h  tri.h  triang.c  util.c  vis.h  visibility.c  vispath.h
lib/sfio/: CMakeLists.txt  Makefile.am  sfclose.c  sfcvt.c  sfextern.c  sfhdr.h  sfio.h  sfio.vcxproj  sfio.vcxproj.filters  sfio_t.h  sfmode.c  sfnew.c  sfopen.c  sfprint.c  sfraise.c  sfscanf.c  sfsync.c  sftable.c  sfungetc.c  sfvscanf.c
lib/util/: CMakeLists.txt  Makefile.am  bitarray.h  exit.h  gv_fopen.c  overflow.h  test_bitarray.c  test_overflow.c  util.vcxproj  util.vcxproj.filters
lib/vpsc/: CMakeLists.txt  Makefile.am  block.cpp  block.h  blocks.cpp  constraint.cpp  constraint.h  csolve_VPSC.cpp  csolve_VPSC.h  generate-constraints.cpp  generate-constraints.h  solve_VPSC.cpp  variable.h  vpsc.vcxproj  vpsc.vcxproj.filters
plugin/: CMakeLists.txt  Makefile.am
plugin/core/: CMakeLists.txt  Makefile.am  gvloadimage_core.c  gvplugin_core.c  gvplugin_core.vcxproj  gvplugin_core.vcxproj.filters  gvrender_core_dia.c  gvrender_core_dot.c  gvrender_core_fig.c  gvrender_core_json.c  gvrender_core_map.c  gvrender_core_mp.c  gvrender_core_pic.c  gvrender_core_pov.c  gvrender_core_ps.c  gvrender_core_svg.c  gvrender_core_tk.c
plugin/devil/: CMakeLists.txt  Makefile.am  gvdevice_devil.c  gvplugin_devil.c
plugin/dot_layout/: CMakeLists.txt  Makefile.am  gvlayout_dot_layout.c  gvplugin_dot_layout.c  gvplugin_dot_layout.vcxproj
plugin/gd/: CMakeLists.txt  Makefile.am  gdioctx_wrapper.h  gvdevice_gd.c  gvloadimage_gd.c  gvplugin_gd.c  gvplugin_gd.vcxproj  gvrender_gd.c  gvrender_gd_vrml.c  gvtextlayout_gd.c
plugin/gdiplus/: CMakeLists.txt  FileStream.cpp  FileStream.h  Makefile.am  gvdevice_gdiplus.cpp  gvloadimage_gdiplus.cpp  gvplugin_gdiplus.cpp  gvplugin_gdiplus.h  gvplugin_gdiplus.vcxproj  gvplugin_gdiplus.vcxproj.filters  gvrender_gdiplus.cpp  gvtextlayout_gdiplus.cpp
plugin/gdk/: CMakeLists.txt  Makefile.am  gvdevice_gdk.c  gvloadimage_gdk.c  gvplugin_gdk.c
plugin/glitz/: CMakeLists.txt
plugin/gs/: CMakeLists.txt  Makefile.am  gvloadimage_gs.c  gvplugin_gs.c
plugin/gtk/: CMakeLists.txt  Makefile.am  callbacks.c  gvdevice_gtk.c  gvplugin_gtk.c
plugin/kitty/: CMakeLists.txt  Makefile.am  gvdevice_kitty.c  gvplugin_kitty.c
plugin/lasi/: CMakeLists.txt  Makefile.am  gvloadimage_lasi.c  gvloadimage_lasi.cpp  gvplugin_lasi.c  gvrender_lasi.cpp
plugin/neato_layout/: CMakeLists.txt  Makefile.am  gvlayout_neato_layout.c  gvplugin_neato_layout.c  gvplugin_neato_layout.vcxproj
plugin/pango/: CMakeLists.txt  Makefile.am  gvgetfontlist.h  gvgetfontlist_pango.c  gvloadimage_pango.c  gvplugin_pango.c  gvplugin_pango.vcxproj  gvrender_pango.c  gvtextlayout_pango.c
plugin/poppler/: CMakeLists.txt  Makefile.am  gvloadimage_poppler.c  gvplugin_poppler.c
plugin/quartz/: CMakeLists.txt  GVTextLayout.h  GVTextLayout.m  Makefile.am  gvdevice_quartz.c  gvloadimage_quartz.c  gvplugin_quartz.c  gvplugin_quartz.h  gvrender_quartz.c  gvtextlayout_quartz.c
plugin/rsvg/: CMakeLists.txt  Makefile.am  gvloadimage_rsvg.c  gvplugin_rsvg.c
plugin/visio/: CMakeLists.txt  VisioText.cpp
tclpkg/: CMakeLists.txt  Makefile.am  mkpkgindex.py  mkpkgindex.sh
tclpkg/gv/: gv.i  (+8 more)
(+868 files in other folders)
