# teach plugins how to find libraries, even if there is another copy of Graphviz
# installed in the system default paths
if(APPLE)
  list(APPEND CMAKE_INSTALL_RPATH "@executable_path/..")
else()
  list(APPEND CMAKE_INSTALL_RPATH "\$ORIGIN/..")
endif()

add_subdirectory(core)
add_subdirectory(devil)
add_subdirectory(dot_layout)
add_subdirectory(gd)
add_subdirectory(gdiplus)
add_subdirectory(gdk)
add_subdirectory(gs)
add_subdirectory(kitty)
add_subdirectory(lasi)
add_subdirectory(neato_layout)
add_subdirectory(pango)
add_subdirectory(poppler)
add_subdirectory(quartz)
add_subdirectory(rsvg)
add_subdirectory(vt)
add_subdirectory(webp)
add_subdirectory(xlib)
